add feedback on submit

--- a/item.html
+++ b/item.html
@@ -66,6 +66,14 @@
         <textarea name="message" class="textarea" placeholder="Put Your Order Details Here" rows="7"></textarea>
         <input type="submit" value="Submit" id="submit">
       </form>
+
+      <div class="modal fade" id="modalId" tabindex="-1" data-bs-backdrop="true" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitleId">Status</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
     </div>
 
     <script src="form-script.js"></script>
